# qgis-master-pass-cxxplugin

./: .gitignore  CMakeLists.txt  README.md  keychainbridge.cpp  keychainbridge.h  keychainbridge.qrc  keychainbridgegui.cpp  keychainbridgegui.h  keychainbridgeguibase.ui  pavement.py
cmake/modules/: FindQGIS.cmake
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst  installation.rst  usage.rst
docs/themes/boundless_doc/: layout.html
docs/themes/boundless_doc/static/: extra.css  opengeo.css
docs/themes/boundless_learning/: layout.html
docs/themes/boundless_product/: footer.html  layout.html  theme.conf
docs/themes/boundless_product/static/css/: theme.css
keychainbridge/: CMakeLists.txt  CMakeLists_authmasterpassutility.txt  keychainbridge.cpp  keychainbridge.h  keychainbridge.qrc  keychainbridgegui.cpp  keychainbridgegui.h  keychainbridgeguibase.ui
keychainbridge/cmake/modules/: FindQtKeychain.cmake
scripts/: build_macos.sh  build_win64.bat  build_win64_qtkeychain.bat
test/: CMakeLists.txt  testkeychainbridgeplugin.cpp
